Fixed swagger failing to give response and tested working of signup api
